# libOL

./: CMakeCPack.cmake  CMakeLists.txt  LICENSE.txt  Makefile  README.md  copyright.txt  todolist.md  todolist.txt
documentation/: libOL1_en.tex  libOL1_fr.tex
examples/: CMakeLists.txt  Makefile  filtered_projections.c  parallel_libol.c  test_libol1.c  test_libol1.f
legacy_sources/: libol1.c  libol1.h  libol1.ins  test_fortran.f
sample_meshes/: hexes.meshb.lz  hexes.meshb.xz  sphere_quad.meshb  spheres_tri.meshb  test.meshb.lz
sources/: CMakeLists.txt  libol1.c  libol1.h  libol1.ins
tests/: CMakeLists.txt  Makefile  README.txt  basicTests.cpp  bug_lemma  bug_lemma.c  incompressible1.meshb  incompressible2.meshb  peau.mesh  structure1.meshb  structure2.meshb  structure3.meshb  structure4.meshb  structure5.meshb  structure6.meshb  test_lemma  test_lemma.c  volume.mesh
tests/bug/: geo.sol  incompressible1.mesh  oct.sol  peau.mesh
